--- a/07-ADAM-ETS-Mixed.Rmd
+++ b/07-ADAM-ETS-Mixed.Rmd
@@ -89,7 +89,7 @@ where $\sigma^2$ is the variance of the error term. Still, the predictive distri
 
 As for the second subgroup, the conditional mean corresponds to the point forecasts, when the forecast horizon is less than or equal to the seasonal frequency of the component (i.e. $h\leq m$), and there is a cumbersome formula for calculating the conditional mean to some of models in this subgroup for the $h>m$. When it comes to the conditional variance, there exists a formula for some of models in the second subgroup, but they are cumbersome as well. For all of these, the interested reader is directed to @Hyndman2008b, page 85.
 
-When it comes to the parameters bounds for the models in this group, the first subgroup of models has bounds similar to the ones for the respective additive error models (Section \@ref(stabilityConditionAdditiveError)) because they both underlie the same exponential smoothing methods, but with additional restrictions, coming from the multiplicative error (Section \@ref(stabilityConditionMultiplicativeError)).
+When it comes to the parameters bounds for the models in this group, the first subgroup of models has bounds similar to the ones for the respective additive error models (Section \@ref(stabilityConditionAdditiveError)) because they both underlie the same Exponential Smoothing methods, but with additional restrictions, coming from the multiplicative error (Section \@ref(stabilityConditionMultiplicativeError)).
 
 1. The *traditional bounds* (aka "usual") should work fine for these models for the same reasons they work for the pure additive ones, although they might be too restrictive in some cases;
 2. The *admissible bounds* for smoothing parameters for the models in this group might be too wide and violate the condition of $(1+ \alpha \epsilon_t)>0$, which is important in order not to break the models.
