--- a/12-ADAM-ETS-Multiple-Frequencies.Rmd
+++ b/12-ADAM-ETS-Multiple-Frequencies.Rmd
@@ -3,7 +3,7 @@ When we work with weekly, monthly or quarterly data, we do not have more than on
 
 To correctly capture such a complicated structure in the data, we need to have a model that includes these multiple frequencies. In this chapter, we discuss how this can be done in the ADAM framework for both ETS and ARIMA. In addition, when we move to modelling high granularity data, there appear several fundamental issues related to how the calendar works and how human beings make their lives more complicated by introducing daylight saving related time changes over the year. Finally, we will discuss a simpler modelling approach, relying on the explanatory variables (mentioned in Chapter \@ref(ADAMX)).
 
-Among the papers related to the topic, we should start with @Taylor2003, who proposed an exponential smoothing model with double seasonality and applied it to energy data. Since then, the topic was developed by @Gould2008, @Taylor2008, @Taylor2010, @DeLivera2010 and @DeLivera2011. In this chapter, we will discuss some of the proposed models, how they relate to the ADAM framework and can be implemented.
+Among the papers related to the topic, we should start with @Taylor2003, who proposed an Exponential Smoothing model with double seasonality and applied it to energy data. Since then, the topic was developed by @Gould2008, @Taylor2008, @Taylor2010, @DeLivera2010 and @DeLivera2011. In this chapter, we will discuss some of the proposed models, how they relate to the ADAM framework and can be implemented.
 
 
 ## Model formulation {#ADAMMultipleFrequenciesModel}
@@ -129,7 +129,7 @@ The first option is more challenging to formalise mathematically and implement i
 
 The second problem in the high frequency data is the **leap years**. It can also be solved shifting the periodicity from $m=365$ to $m=366$ on 29th February in the spirit of option (1) or using the categorical variables approach (2). There is a difference, however: the latter assumes the estimation of an additional parameter, while the former would be suitable for the data with only one leap year in the data, where the estimation of the seasonal index for 29th February might be difficult. However, given the discussion in Section \@ref(ETSXMultipleSeasonality), maybe we should not bother with $m=365$ in the first place and rethink the problem, if possible. Having 52 / 53 weeks in a year has similar difficulties but at least does not involve the estimation of so many initial seasonal states.
 
-Alternatively, @DeLivera2010 proposed to tackle the problem of leap years introducing the fractional seasonality via Fourier series. The model that implements this is called TBATS [it is an exponential smoothing state space model with Box-Cox transformation, ARMA errors, Trend and Seasonal components, @DeLivera2011]. While this resolves the aforementioned problem with leap years, the approach introduces an additional complexity, because now we need to select the number of harmonics to use, which in general is not straightforward.
+Alternatively, @DeLivera2010 proposed to tackle the problem of leap years introducing the fractional seasonality via Fourier series. The model that implements this is called TBATS [it is an Exponential Smoothing state space model with Box-Cox transformation, ARMA errors, Trend and Seasonal components, @DeLivera2011]. While this resolves the aforementioned problem with leap years, the approach introduces an additional complexity, because now we need to select the number of harmonics to use, which in general is not straightforward.
 
 Summarising, when trying to resolve the problem with DST and leap years, there are several possible solutions, each one of them having advantages and disadvantages. In order to decide, which to use in the end, it makes sense to try out several of them and select the one that works better (e.g. produces lower forecast errors).
 
